Commit from LXDE Pootle server by user jcsl.: 1565 of 1565 strings translated (0 need review).

--- a/po/es.po
+++ b/po/es.po
@@ -7,16 +7,16 @@ msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-11 15:20+0200\n"
-"PO-Revision-Date: 2014-06-27 23:49+0000\n"
-"Last-Translator: Adolfo <fitoschido@ubuntu.com>\n"
+"PO-Revision-Date: 2014-10-19 17:16+0000\n"
+"Last-Translator: system user <>\n"
 "Language-Team: Spanish (Castilian) <translation@mailinglist.lxde.org>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1403912950.0\n"
+"X-Generator: Pootle 2.6.0-rc2\n"
+"X-POOTLE-MTIME: 1413739015.000000\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -1026,7 +1026,7 @@ msgid ""
 "This text file '%s' seems to be an executable script.\n"
 "What do you want to do with it?"
 msgstr ""
-"El archivo de texto «%s» parece ser un <i>script</i> ejecutable.\n"
+"El archivo de texto «%s» parece ser un guión ejecutable.\n"
 "¿Qué quiere hacer con él?"
 
 #: ../src/gtk/fm-gtk-file-launcher.c:148
