--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+* Fixed crash in templates on file that was deleted instantly after creation.
+
 Changes on 1.2.3 since 1.2.2:
 
 * Changed licence for libfm-extra and libfm components from GPL-2 to
