--- a/po/nl.po
+++ b/po/nl.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-11 15:20+0200\n"
-"PO-Revision-Date: 2014-10-29 18:08+0000\n"
+"PO-Revision-Date: 2014-10-29 22:06+0000\n"
 "Last-Translator: Pjotr  <pjotrvertaalt@gmail.com>\n"
 "Language-Team: Dutch\n"
 "Language: nl\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.6.0-rc2\n"
-"X-POOTLE-MTIME: 1414606132.000000\n"
+"X-POOTLE-MTIME: 1414620385.000000\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -873,7 +873,7 @@ msgid ""
 "<Ctrl+H> to toggle displaying hidden files."
 msgstr ""
 "Bestanden op dit systeem zijn verborgen indien hun naam begint met een punt "
-"('.'). Met de toetscombinatie <Ctrl h> kunt u het weergeven van verborgen "
+"('.'). Met de toetscombinatie 'Ctrl h' kunt u het weergeven van verborgen "
 "bestanden omschakelen."
 
 #: ../src/gtk/fm-file-properties.c:1026
