--- a/po/nl.po
+++ b/po/nl.po
@@ -88,8 +88,8 @@ msgstr ""
 #: ../data/ui/app-chooser.glade.h:14
 msgid "<b>_Application name (optional, set it to keep association)</b>"
 msgstr ""
-"<b>Naam van toepassing (naar keuze, stel dit in om associatie te "
-"behouden)</b>"
+"<b>Naam van toepassing (naar keuze, stel dit in om associatie te behouden)</"
+"b>"
 
 #: ../data/ui/app-chooser.glade.h:15
 msgid "Execute custom command line to open files"
@@ -855,8 +855,7 @@ msgstr "Gelieve een geldige groepsnaam of numerieke ID in te voeren."
 msgid ""
 "Do you want to recursively apply these changes to all files and sub-folders?"
 msgstr ""
-"Wilt u deze veranderingen recursief toepassen op alle bestanden en "
-"submappen?"
+"Wilt u deze veranderingen recursief toepassen op alle bestanden en submappen?"
 
 #: ../src/gtk/fm-file-properties.c:960
 msgid "Hide or unhide the file"
@@ -1068,7 +1067,8 @@ msgstr "Wilt u het bestand '%s' naar de prullenbak verplaatsen?"
 msgid "Do you want to move the %d selected file to trash can?"
 msgid_plural "Do you want to move the %d selected files to trash can?"
 msgstr[0] "Wilt u het %d geselecteerde bestand naar de prullenbak verplaatsen?"
-msgstr[1] "Wilt u de %d geselecteerde bestanden naar de prullenbak verplaatsen?"
+msgstr[1] ""
+"Wilt u de %d geselecteerde bestanden naar de prullenbak verplaatsen?"
 
 #: ../src/gtk/fm-gtk-utils.c:988
 #, c-format
